--- a/src/Components/Blog/BlogComponent.css
+++ b/src/Components/Blog/BlogComponent.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Urbanist&display=swap');
 
 .blog-component{
     height:100%;
     background-color: #EAEAF8;
     border-radius: 6px;
-    cursor: pointer;
     box-shadow: 0px 0px 3px #515E63;
     margin: 15px;
     margin-top: 20px;
@@ -50,7 +50,8 @@
     margin-right: 20px;
     font-size: 11px;
     line-height: 2;
-    
+    font-family: 'Urbanist', sans-serif;
+
 }
 .blog-component .more-then-button {
     position: relative;
@@ -119,29 +120,28 @@
     color: white;
 
 }
-.blog-component
- .more-then-button .like-button{
+ .like-button{
      position: absolute;
      left: 20px;
      top: 21px;
+     cursor: pointer;
  }
-.blog-component
- .more-then-button .like-button i{
+ .like-button i{
      color: #FF2442;
-     font-size: 18px;
      transition: 0.5s;
  }
- .blog-component .more-then-button .save-button{
+ .save-button{
      position: absolute;
      left: 50px;
      top: 21px;
      transition: 0.5s;
+     cursor: pointer;
+
 
  }
 
- .blog-component .more-then-button .save-button i{
+ .save-button i{
     color: #434C5D;
-    font-size: 18px;
 
  }
 
