--- a/src/Components/Blog/Blog.css
+++ b/src/Components/Blog/Blog.css
@@ -59,12 +59,12 @@ blog .saved-and-liked-button{
     right: 15px;
     top: 20px;
 }
-
 .saved-and-liked-button span{
     padding: 8px;
     border-radius: 4px;
     margin-right: 15px;
-    width: 32px;
+    width: 24px;
+    height: 24px;
     cursor: pointer;
 } 
 .saved-and-liked-button .save{
@@ -81,7 +81,7 @@ blog .saved-and-liked-button{
 }
 .saved-and-liked-button .main-page{
     color: white;
-    background-color: #00C1D4;
+    background-color: #222831;
 }
 
 
