--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -18,7 +18,7 @@
 .navbar .app-logo h3{
     margin-left: 10px;
     font-family: 'Roboto Slab', serif;
-    color: #FFF5AB;
+    color: #E05D5D;
 }
 .navbar .app-logo img{
     width: 36px;
@@ -58,10 +58,36 @@
 }
 
 
-@media only screen and (max-width:320px){
+.mobil-menu{
+    display: flex;
+    position: absolute;
+    flex-direction: column;
+    padding-top: 70px;
+    margin-right: 20px;
+    width: 100%;
+}
+.mobil-menu span{
+    background-color: #133B5C;
+    padding: 8px;
+    
+}
+
+.menu-icon img{
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    cursor: pointer;
+    z-index: 3;
+}
+
+
+@media only screen and (max-width:365px){
     .navbar .saved-and-liked-button{
-        position: absolute;
-        top: 70px;
-        left:60px;
+        display: none;
     }
 }
+
+
+
