--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -60,18 +60,42 @@
 
 .mobil-menu{
     display: flex;
-    position: absolute;
     flex-direction: column;
-    padding-top: 70px;
-    margin-right: 20px;
     width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 175px;
+    background-color: #133B5C;
+    z-index: 2;
+
+}
+.mobil-menu div #head{
+    position: absolute;
+    top: 8px;
+    left: 10px;
+    color: white;
+    font-size: 18px;
+    opacity: 0.6;
+    font-family: 'Roboto Slab', serif;
+
+}
+.mobil-menu div{
+    display: flex;
+    flex-direction: column;
+    padding-top: 40px;
 }
 .mobil-menu span{
-    background-color: #133B5C;
-    padding: 8px;
-    
+    padding: 10px;
+
 }
 
+.mobil-menu span #link-mobil-menu{
+    color: white;
+    font-family: 'Roboto Slab', serif;
+
+}
 .menu-icon img{
     width: 20px;
     height: 20px;
