--- a/src/Components/Blog/Blog.css
+++ b/src/Components/Blog/Blog.css
@@ -83,6 +83,17 @@ blog .saved-and-liked-button{
     color: white;
     background-color: #222831;
 }
+.blog .loader {
+    width: 100%;
+    height: 60vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.blog .loader img{
+    width: 96px;
+    height: 96px;
+}
 
 
 @media only screen and (max-width:824px) {
